# command_terminal_mcp

./: .gitignore  another-link-chat.md  chat.md  deploy.ps1  deploy.sh  link-chat.md  link2.md  mcp_server_setup.bash  mcp_server_setup.ps1  more.md  pytest.ini  review.md  settings.json  verify-map.md  verify.md
.cursor/: mcp.json
command_terminal_mcp/: pyproject.toml
mcp_server/: __main__.py  config.py  jobs.py  metrics.py  powershell_pool.py  schemas.py  sse.py
mcp_server/dispatcher/: __init__.py  router.py  rpc_stdio.py
mcp_server/pool_manager/: __init__.py  queue.py  session.py
mcp_server/watcher/: __init__.py  file_watcher.py  idle_watcher.py
tests/: conftest.py  test_config.py  test_dispatcher.py  test_e2e_logic.py  test_integration_file_watcher.py  test_integration_metrics.py  test_integration_sse.py  test_jobs.py  test_powershell_pool.py  test_schemas.py  test_sse.py  test_watcher.py
