[project]
name = "command-terminal-mcp"
version = "0.1.0"
description = ""
authors = [
    {name = "Jake Z",email = "jakez@askthebytes.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "command_terminal_mcp", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
